add logs for necessary tracking